feat: adds functionality for search params to act as filters on results page

--- a/index.html
+++ b/index.html
@@ -163,41 +163,41 @@
                     <div class="search-choices">
                         <div class="language-choices">
                             <div class="english-div">
-                                <input type="radio" class="language-choice" id="english" name="language" value="en" checked>
+                                <input type="radio" class="language-choice en-lang" id="english" name="language" value="en" checked data-selected="true">
                                 <label for="english">English</label>
                             </div>
                             <div class="french-div">
-                                <input type="radio" class="language-choice" id="french" name="language" value="fr">
+                                <input type="radio" class="language-choice fr-lang" id="french" name="language" value="fr">
                                 <label for="french">French</label>
                             </div>
                             <div class="german-div">
-                                <input type="radio" class="language-choice" id="german" name="language" value="de">
+                                <input type="radio" class="language-choice de-lang" id="german" name="language" value="de">
                                 <label for="german">German</label>
                             </div>
                             <div class="spanish-div">
-                                <input type="radio" class="language-choice" id="spanish" name="language" value="es">
+                                <input type="radio" class="language-choice es-lang" id="spanish" name="language" value="es">
                                 <label for="spanish">Spanish</label>
                             </div>
                             <div class="portuguese-div" id="portuguese-div">
-                                <input type="radio" class="language-choice" id="portuguese" name="language" value="pt">
+                                <input type="radio" class="language-choice pt-lang" id="portuguese" name="language" value="pt">
                                 <label for="portuguese">Portuguese</label>
                             </div>
                             <div class="chinese-div">
-                                <input type="radio" class="language-choice" id="chinese" name="language" value="zh">
+                                <input type="radio" class="language-choice zh-lang" id="chinese" name="language" value="zh">
                                 <label for="chinese">Chinese</label>
                             </div>
                         </div>
                         <div class="tweet-type-choices">
                             <div class="recent-div">
-                                <input type="radio" class="tweet-type-choice" id="recent" name="tweet-type" value="recent" checked>
+                                <input type="radio" class="tweet-type-choice recent-type" id="recent" name="tweet-type" value="recent" checked data-selected="true">
                                 <label for="recent">Recent tweets</label>
                             </div>
                             <div class="popular-div">
-                                <input type="radio" class="tweet-type-choice" id="popular" name="tweet-type" value="popular">
+                                <input type="radio" class="tweet-type-choice popular-type" id="popular" name="tweet-type" value="popular">
                                 <label for="popular">Top tweets</label>
                             </div>
                             <div class="mixed-div">
-                                <input type="radio" class="tweet-type-choice" id="mixed" name="tweet-type" value="mixed">
+                                <input type="radio" class="tweet-type-choice mixed-type" id="mixed" name="tweet-type" value="mixed">
                                 <label for="mixed">I like it mixed up</label>
                             </div>
                         </div>
