fix: fixes personal website link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <!-- <p class="about-header">About </p> -->
                         <p class ="about-text">twtr  &middot; spotlight is an app that simplifies searching for tweets on Twitter. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to your collections to view later.</p>
                         <div class="made-by-mobile">
-                            <p class="made-by">Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
+                            <p class="made-by">Made with &hearts; by <a target="_blank" href="https://lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
                             <p>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></p>
                         </div>
                     </div>
