fix: fixes personal website link

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </main>
     <footer class="">
         <p class="big-footer">
-            <span>Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a>  ::  </span><span>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></span>
+            <span>Made with &hearts; by <a target="_blank" href="http://lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a>  ::  </span><span>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></span>
         </p>
     </footer> 
 </div>       
