feat: adds page loader animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 <body ontouchstart="">
     <div class="root">
+
+    <div class="page-laoder-div">
+        <div class="page-loader">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <p>loading</p>
+    </div>
+
+
     <span class="loader hide"></span>
     <!-- Modals -->
 
