fix: fixes type in page loader classname

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 <body ontouchstart="">
     <div class="root">
 
-    <div class="page-laoder-div">
+    <div class="page-loader-div">
         <div class="page-loader">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <p>loading</p>
     </div>
 
 
