fix: fixes type in page loader classname

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body ontouchstart="">
     <div class="root">
 
-    <div class="page-loader-div">
+    <div class="page-loader-div" style="background-color:#15202B;
+        z-index: 500;
+        position: fixed;
+        display: flex;
+        height: 100vh;
+        width: 100vw;">
         <div class="page-loader">
             <div></div>
             <div></div>
