fix: fixes page loader bg bug

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title> twtr  &middot; spotlight </title>
 </head>
 
-<body ontouchstart="">
+<body ontouchstart="" style="background-color:#15202B;">
     <div class="root">
 
     <div class="page-loader-div" style="background-color:#15202B;
